@@ -42,17 +42,19 @@
     color: green;
 }
 
-/* The send-process button: status off (ExtJS Cycle button) */
-.gon-sendprocess-off button {
+/* The send-process button (ExtJS button) */
+.gon-sendprocess .x-btn {
     color: red;
+    box-shadow: 0 0 0 1px #eeb1b1;
 }
-
-/* The groups / categories tree */
-.gon-tree-groupscategories {
-    padding-bottom: 4px;
-    margin-bottom: 4px;
-    border-top: 1px solid #dadada;
-    border-bottom: 1px solid #dadada;
+.gon-sendprocess .x-btn.gon-sendprocess-off {
+    background-color: #eeb1b1;
+    box-shadow: 0 0 0 1px #eeb1b1;
+}
+.gon-sendprocess .x-btn.gon-sendprocess-off.x-btn-focus,
+.gon-sendprocess .x-btn.gon-sendprocess-off.x-btn-over {
+    background-color: #e29191;
+    box-shadow: 0 0 0 1px #e29191;
 }
 
 /* Pagetitle column in newsletters grid */
