@@ -128,6 +128,12 @@ $_lang['goodnews.newsletter_cat_not_defined']                       = '(keine ge
 $_lang['goodnews.newsletter_cat_assign']                            = 'Mailing Kategorien zuweisen';
 $_lang['goodnews.newsletter_cat_assign_desc']                       = 'Entsprechend dieser Zuweisung erfolgt die Zusammenstellung der Empfänger.';
 $_lang['goodnews.newsletter_send_process']                          = 'Sendeprozess: ';
+$_lang['goodnews.newsletter_send_process_started']                  = 'Prozesse gestartet';
+$_lang['goodnews.newsletter_send_process_started_msg_success']      = 'Die Sendeprozesse wurden aktiviert!';
+$_lang['goodnews.newsletter_send_process_started_msg_failed']       = 'Die Sendeprozesse konnten nicht aktiviert werden!';
+$_lang['goodnews.newsletter_send_process_stopped']                  = 'Prozesse gestoppt';
+$_lang['goodnews.newsletter_send_process_stopped_msg_success']      = 'Alle Sendeprozesse wurden deaktiviert!';
+$_lang['goodnews.newsletter_send_process_stopped_msg_failed']       = 'Die Sendeprozesse konnten nicht deaktiviert werden!';
 $_lang['goodnews.newsletter_grid_autorefresh']                      = 'Auto-Refresh: ';
 $_lang['goodnews.newsletter_sendlog_view']                          = 'Sendeprotokoll öffnen';
 $_lang['goodnews.newsletter_sendlog_window_title']                  = 'Sendeprotokoll für Mailing: ';
