@@ -128,6 +128,12 @@ $_lang['goodnews.newsletter_cat_not_defined']                       = '(none sel
 $_lang['goodnews.newsletter_cat_assign']                            = 'Assign mailing categories';
 $_lang['goodnews.newsletter_cat_assign_desc']                       = 'Accordingly to this assignment the recipients are assorted.';
 $_lang['goodnews.newsletter_send_process']                          = 'Send-Process: ';
+$_lang['goodnews.newsletter_send_process_started']                  = 'Processes Started';
+$_lang['goodnews.newsletter_send_process_started_msg_success']      = 'The send processes have been enabled!';
+$_lang['goodnews.newsletter_send_process_started_msg_failed']       = 'The send processes could not be enabled!';
+$_lang['goodnews.newsletter_send_process_stopped']                  = 'Processes Stopped';
+$_lang['goodnews.newsletter_send_process_stopped_msg_success']      = 'All send processes have been disabled!';
+$_lang['goodnews.newsletter_send_process_stopped_msg_failed']       = 'The send processes could not be disabled!';
 $_lang['goodnews.newsletter_grid_autorefresh']                      = 'Auto-Refresh: ';
 $_lang['goodnews.newsletter_sendlog_view']                          = 'View Send-Log';
 $_lang['goodnews.newsletter_sendlog_window_title']                  = 'Send-Log for Mailing: ';
