@@ -128,6 +128,12 @@ $_lang['goodnews.newsletter_cat_not_defined']                       = '(aucune s
 $_lang['goodnews.newsletter_cat_assign']                            = 'Assigner des catégories de mailing';
 $_lang['goodnews.newsletter_cat_assign_desc']                       = 'Les destinataires sont assortis.';
 $_lang['goodnews.newsletter_send_process']                          = 'Processus d\'envoi: ';
+$_lang['goodnews.newsletter_send_process_started']                  = 'Processus entamés';
+$_lang['goodnews.newsletter_send_process_started_msg_success']      = 'Les processus d\'envoi ont été activés!';
+$_lang['goodnews.newsletter_send_process_started_msg_failed']       = 'Les processus d\'envoi n\'ont pas pu être activés!';
+$_lang['goodnews.newsletter_send_process_stopped']                  = 'Processus arrêtés';
+$_lang['goodnews.newsletter_send_process_stopped_msg_success']      = 'Tous les processus d\'envoi ont été désactivés!';
+$_lang['goodnews.newsletter_send_process_stopped_msg_failed']       = 'Les processus d\'envoi n\'ont pas pu être désactivés!';
 $_lang['goodnews.newsletter_grid_autorefresh']                      = 'Auto-Refresh: ';
 $_lang['goodnews.newsletter_sendlog_view']                          = 'Voir Log d\'envoi';
 $_lang['goodnews.newsletter_sendlog_window_title']                  = 'Envoyer les Logs pour le Mailing: ';
