@@ -28,30 +28,41 @@ class GoodNewsSwitchSendProcessProcessor extends modObjectProcessor {
 
     public $languageTopics = array('setting');
 
-    /** @var string $value The state to switch the send process to (can be on off off) */
-    public $state = null;
+    /** @var string $emergencystop The state to switch the send process to (can be "true" "false") */
+    public $emergencystop = null;
     
     public function initialize() {
-        $this->state = $this->getProperty('state');
+        $this->emergencystop = $this->getProperty('emergencystop');
         return parent::initialize();
     }
     
     public function process() {
  
         $worker_process_active = $this->modx->getObject('modSystemSetting', 'goodnews.worker_process_active');
-        if ($this->state == 'on') {
-            $worker_process_active->set('value', '1');
-        } else {
+
+        // Toggle button is pressed (means emergency stopp for send process!)
+        if ($this->emergencystop == "true") {
             $worker_process_active->set('value', '0');
+        // Toggle button is not pressed
+        } else {
+            $worker_process_active->set('value', '1');
         }
 
         if ($worker_process_active->save()) {
             // refresh part of cache (MODx 2.1.x) so that settings change immediately takes effect
             $cacheRefreshOptions = array('system_settings' => array());
             $this->modx->cacheManager->refresh($cacheRefreshOptions);
-            return $this->success($this->modx->lexicon('goodnews.msg_saving_successfull'));
+            if ($this->emergencystop == "true") {
+                return $this->success($this->modx->lexicon('goodnews.newsletter_send_process_stopped_msg_success'));
+            } else {
+                return $this->success($this->modx->lexicon('goodnews.newsletter_send_process_started_msg_success'));
+            }
         } else {
-            return $this->modx->error->failure($this->modx->lexicon('setting_err_save'));
+            if ($this->emergencystop == "true") {
+                return $this->modx->error->failure($this->modx->lexicon('goodnews.newsletter_send_process_stopped_msg_failed'));
+            } else {
+                return $this->success($this->modx->lexicon('goodnews.newsletter_send_process_started_msg_failed'));
+            }
         }
     }
 }
